feat(forms): Se agrega nuevo formulario horizontal y mejoras de estilo en formularios existentes

--- a/interactive_form/index.html
+++ b/interactive_form/index.html
@@ -9,24 +9,25 @@
 </head>
 <body>
 <main>
+
     <div class="section-wrapper horizontal">
         <form class="container">
             <fieldset>
                 <legend>Basic Forms</legend>
 
                 <div class="input-container">
-                    <label for="email">Email address</label>
-                    <input id="email" type="email" placeholder="contact@danild.dev" required>
+                    <label for="email-1">Email address</label>
+                    <input id="email-1" type="email" placeholder="contact@danild.dev" required>
                 </div>
 
                 <div class="input-container">
-                    <label for="password">Contraseña</label>
-                    <input id="password" type="password" placeholder="***********" required>
+                    <label for="password-1">Contraseña</label>
+                    <input id="password-1" type="password" placeholder="***********" required>
                 </div>
 
                 <div class="checkbox-container">
-                    <input type="checkbox" id="check-me">
-                    <label for="check-me">Check Me Out</label>
+                    <input type="checkbox" id="check-me-1">
+                    <label for="check-me-1">Check Me Out</label>
                 </div>
 
                 <div class="button-container">
@@ -36,7 +37,32 @@
 
             </fieldset>
         </form>
-        <section class="container"></section>
+        <form class="container">
+            <fieldset>
+                <legend>Horizontal Forms</legend>
+
+                <div class="input-container horizontal">
+                    <label for="email-2">Email address</label>
+                    <input id="email-2" type="email" placeholder="contact@danild.dev" required>
+                </div>
+
+                <div class="input-container horizontal">
+                    <label for="password-2">Contraseña</label>
+                    <input id="password-2" type="password" placeholder="***********" required>
+                </div>
+
+                <div class="checkbox-container">
+                    <input type="checkbox" id="check-me-2">
+                    <label for="check-me-2">Check Me Out</label>
+                </div>
+
+                <div class="button-container">
+                    <button type="submit" class="button--primary">Submit</button>
+                    <button type="button" class="button--secondary">Cancel</button>
+                </div>
+
+            </fieldset>
+        </form>
     </div>
     <div class="section-wrapper">
         <section class="container"></section>
